--- a/TwitterClient/Base.lproj/Main_iPhone.storyboard
+++ b/TwitterClient/Base.lproj/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B3116" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -73,7 +73,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Tweet Cell" rowHeight="94" id="kV8-EM-peT" customClass="UITweetCell">
-                                <rect key="frame" x="0.0" y="86" width="320" height="94"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="94"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kV8-EM-peT" id="es2-RF-GgD">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="93"/>
@@ -213,7 +213,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="1R2-IS-JaM"/>
                     <connections>
-                        <outlet property="avatar" destination="1ob-RB-7a5" id="EdJ-6o-v4V"/>
+                        <outlet property="imageView" destination="1ob-RB-7a5" id="0xd-GI-n2b"/>
                         <outlet property="tweetText" destination="Nrp-Pt-X9p" id="vZy-LX-M21"/>
                         <outlet property="twitterHandle" destination="vhJ-La-qEB" id="7cw-j5-IeK"/>
                     </connections>
@@ -263,7 +263,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="PPB-IM-5om">
-                            <rect key="frame" x="0.0" y="64" width="320" height="189"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="189"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Efm-m3-xBW">
@@ -281,7 +281,7 @@
                         </view>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Tweet Cell" rowHeight="94" id="mYP-45-c3m" customClass="UITweetCell">
-                                <rect key="frame" x="0.0" y="275" width="320" height="94"/>
+                                <rect key="frame" x="0.0" y="211" width="320" height="94"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mYP-45-c3m" id="tiJ-Sp-SnD">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="93"/>
